# Interview-task-fifo

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: crit_sec.h  fifo.h
src/: crit_sec.c  fifo.c
tests/: test.cpp
